Move register button

--- a/Index.html
+++ b/Index.html
@@ -212,10 +212,7 @@
 
       <input type="hidden" id="latitude" name="latitude">
       <input type="hidden" id="longitude" name="longitude">
-
-      <button type="submit" id="submitButton">Register</button>
     </form>
-    <div id="message"></div>
     
     <!-- Product Inventory Section -->
     <div id="productSection" class="product-section">
@@ -229,6 +226,9 @@
         </div>
       </div>
     </div>
+    
+    <button type="submit" id="submitButton" form="inventoryForm">Register</button>
+    <div id="message"></div>
   </div>
 
   <script>
